img gallery features

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dynamic Image Gallery</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="header"><h1>HEllo,<br/>
+Welcome to the images Gallery</h1></div>
+<div class="gallery" id="imageGallery">
+  <!-- Images will be dynamically added here -->
+</div>
 
+<script src="script.js"></script>
+</body>
+</html>
