--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="header"><h1>HEllo,<br/>
-Welcome to the images Gallery</h1></div>
-<div class="gallery" id="imageGallery">
-  <!-- Images will be dynamically added here -->
-</div>
-
-<script src="script.js"></script>
+  <div class="header">
+    <h1>HEllo,<br/>Welcome to the images Gallery</h1>
+    <!-- <input type="file" id="fileInput" accept="image/*" style="display: none;">
+    <button onclick="document.getElementById('fileInput').click()">Upload Image</button>
+    <input type="text" id="imageUrl" placeholder="Enter Image URL">
+    <button onclick="addImageFromUrl()">Add Image</button>  -->
+  </div>
+  <div class="gallery" id="imageGallery">
+    <!-- Images will be dynamically added here -->
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
